# thesis-project

./: .gitignore  getbooks.py
K6/: test.js
actix-api/: Cargo.toml
actix-api/src/: main.rs  services.rs
book-app/: chance.js  index.html  script.js
fastify-api/: package-lock.json  package.json  schema.js  server.js
gin-api/: go.mod  go.sum  main.go
gin-api/handlers/: bookhandler.go
gin-api/initializers/: db.go
gin-api/models/: book.go
gin-api/repository/: book.go
nginx/: nginx.conf
