[package]
name = "actix-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
actix-rt = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "macros"] }
serde_json = "1.0.140"
